--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "moment": "^2.20.1",
     "vue": "^2.5.2",
     "vue-ls": "^2.3.3",
     "vue-router": "^3.0.1"
